# Sprint-Summary-Agent

./: .env.example  .gitignore  CLAUDE.md  OPENROUTER_SETUP.md  POWERPOINT_DIAGNOSIS.md  POWERPOINT_FIX_SUMMARY.md  PYTHON_CONVERSION_STATUS.md  PYTHON_QUICKSTART.md  README.md  SOLUTION_FOUND.md  TROUBLESHOOTING.md  create_ultra_compatible_pptx.py  fix_pptx_compatibility.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
sprint_summary_agent/: __init__.py  jira_client.py  llm_provider.py  llm_recommendations.py  llm_summary_generator.py  main.py  output_generator.py  powerpoint_generator.py  powerpoint_generator_shapes.py  settings.py  sprint_data_collector.py
src/: config.js  index.js  jiraClient.js  llmProvider.js  llmRecommendations.js  llmSummaryGenerator.js  outputGenerator.js  powerpointGenerator.js  sprintDataCollector.js
